--- a/style.css
+++ b/style.css
@@ -97,5 +97,6 @@ html:has(dialog[open]) {
         width: 100vw;
         height: 100vh;
         object-fit: cover;
+        object-position: center;
     }
 }
